Fix svg on ios

--- a/src/components/path-circle-text/PathCircleText.scss
+++ b/src/components/path-circle-text/PathCircleText.scss
@@ -1,6 +1,12 @@
 .path-circle-text {
   display: flex;
   justify-content: center;
-  width: fit-content;
+  align-items: center;
+  width: 16rem;
   height: 16rem;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
